--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,22 @@ jobs:
       - run:
           name: Run Tests
           command: vendor/bin/phpunit
+      - run:
+          name: deploy to GCP
+          command: |
+            if ["$CIRCLE_BRANCH" == 'master' ]; then
+              ssh -i $SSH_PRIVATE_KEY $USER@$IPADDRESS 'git pull master && docker-compose down && docker-compose up'
+            fi
+
+      # - run:
+      #     name: Deploy to GCP
+      #     command: |
+      #       # Add the Cloud SDK distribution URI as a package source
+      #       echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+      #       # Import the Google Cloud Platform public key
+      #       curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+      #       # Update the package list and install the Cloud SDK
+      #       sudo apt-get update && sudo apt-get install google-cloud-sdk
       # - run:
       #     name: Make Artisan executable
       #     command: chmod +x artisan && ls && pwd
