--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,22 @@
     "type": "project",
     "require": {
         "php": "^7.2",
+        "google/cloud-error-reporting": "^0.14.5",
+        "google/cloud-logging": "^1.16",
         "illuminate/hashing": "^5.8",
         "laravel/lumen-framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "owen-it/laravel-auditing": "^9.2",
         "tymon/jwt-auth": "dev-develop#f72b8eb as 1.0.0-rc.3.2",
-        "vlucas/phpdotenv": "^3.3"
+        "vlucas/phpdotenv": "^3.3",
+        "appzcoder/lumen-routes-list": "^1.0",
+        "sendgrid/sendgrid": "^5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "phpunit/php-invoker": "^2.0",
-        "phpunit/phpunit": "^7.0",
-        "appzcoder/lumen-routes-list": "^1.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
@@ -39,7 +42,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "php artisan key:generate --show"
         ],
         "post-install-cmd": [
             "composer dump-autoload",
