--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,16 +37,8 @@ jobs:
           command: |
             echo $SSH_PRIVATE_KEY >> ssh_key
             if [ "$CIRCLE_BRANCH" == 'master' ]; then
-              ssh -i ssh_key $USER@$IPADDRESS <<EOF
-                echo "pulling from github"
-                git pull https://github.com/deye9/erp.git
-                echo "pulling down current deployment"
-                sudo docker-compose down
-                echo "spinning up new deployment"
-                sudo docker-compose up
-                EOF
+              ssh -i ssh_key $USER@$IPADDRESS 'git pull https://github.com/deye9/erp.git && sudo docker-compose down && sudo docker-compose up'
             fi
-
       # - run:
       #     name: Deploy to GCP
       #     command: |
